<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF2F9"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:src="@drawable/ic_group_10158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="26dp"
        android:text="@string/welcome_john"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

    </TextView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="56dp"

        android:background="@drawable/hometabs"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayoutCompat3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_do_today">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Do Today"
            android:textColor="#060606"
            android:textSize="16sp"
            android:textStyle="bold"

            >

        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/hometabs"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_activities___tips">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/activities_tips"
            android:textColor="#060606"
            android:textSize="14sp"
            android:textStyle="bold"

            >

        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/hometabs"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_track_it">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/track_it"
            android:textColor="#060606"
            android:textSize="16sp"
            android:textStyle="bold"

            >

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/hometabs"

        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_say___share">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events"
            android:textColor="#060606"
            android:textSize="16sp"
            android:textStyle="bold"

            >

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/hometabs"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_training">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/training"
            android:textColor="#060606"
            android:textSize="16sp"
            android:textStyle="bold"

            >

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/hometabs"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_say___share_1">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/say_share"
            android:textColor="#060606"
            android:textSize="16sp"
            android:textStyle="bold"

            >

        </TextView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>